deploy/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: banking-demo-vs
  namespace: banking-demo
spec:
  gateways:
  - aks-istio-ingress/banking-demo-gateway
  hosts:
  - "onlinebankingdemo.bjdazure.tech"
  http:
  - match:
    - uri:
        prefix: /api/auth
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/users
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/accounts
    route:
    - destination:
        host: account-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/transactions
    route:
    - destination:
        host: transaction-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/transfers
    route:
    - destination:
        host: transfer-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/chat
    route:
    - destination:
        host: chatbot-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/anomaly
    route:
    - destination:
        host: ai-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/budget
    route:
    - destination:
        host: budget-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/evaluations
    route:
    - destination:
        host: prompt-eval-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/admin/users
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/admin/login-audits
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/admin/promote
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/admin
    route:
    - destination:
        host: ai-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/account-opening
    route:
    - destination:
        host: account-opening-service
        port:
          number: 80
  - route:
    - destination:
        host: ui-app
        port:
          number: 80
